# ESP32-Telegram-Bot

./: CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  app_telegram.c  app_telegram.h  main.c  storage_nvs.c  storage_nvs.h  system_state.c  system_state.h  wifi_manager.c  wifi_scanner.c  wifi_scanner.h
